# yolo_demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
yolo_runner/: __init__.py  __main__.py  cli.py  pipeline.py
